# atividade02-unidade02-EngSoftware2

api-fastapi/: database.db  pyproject.toml
api-fastapi/src/: app.py  database.py  settings.py
api-fastapi/src/controllers/: freteController.py
api-fastapi/src/models/: cidade.py  cliente.py  frete.py
api-fastapi/src/repositories/: cidadeRepository.py  clienteRepository.py  freteRepository.py
api-fastapi/src/schemas/: cidadeSchemas.py  clienteSchemas.py  freteSchemas.py
api-fastapi/src/services/: freteService.py
api-fastapi/tests/: __init__.py  conftest.py  test_api.py  test_db.py  test_service.py
